GNOME Bugzilla – Bug 685286
Shortcuts assigned to the Menu key do not work
Last modified: 2012-11-08 18:59:00 UTC
The Menu key (next to the right control) can be set in the UI as a trigger to change keyboard layouts, but it no longer works as it did in 3.5. When pressed, the Menu key only pops the right-click menu. The shortcut command is not activated.
I don't think unmodified Menu ever worked for any of the system settings' shortcuts. If you mean that you'd like Menu to work for switching keyboard layouts then I can add it to the modifiers only setting (which is separate and not configurable from System Settings but from gnome-tweak-tool instead).
Thank you, Rui, that would be better than nothing. Menu did work for changing keyboard layouts (maybe not for other tasks).
I don't think there's anything stopping the Menu button from working for anything in the media keys plugin. It's not a modifier, and it should work.
Created attachment 225596 [details] [review] keygrab: Allow grabbing Menu unmodified by default -- (In reply to comment #3) > I don't think there's anything stopping the Menu button from working for > anything in the media keys plugin. It's not a modifier, and it should work. You're right that it's not a modifier but still the grabbing code prevents unmodified regular keys except for a few cases. We can add the Menu key also as an exception though.
Review of attachment 225596 [details] [review]: ++
Attachment 225596 [details] pushed as 2184aa5 - keygrab: Allow grabbing Menu unmodified by default Yotam, this means that Menu should work now from the system setting's regular shortcuts UI.
Thank you for this extremely quick fix! I will check it when it hits my gnome-settings & ibus ppa. An unrelated question: are you aware of the keyboard grabbing issue in LibreOffice, which stopped recognising common shortcuts (Ctrl+X etc.) in non-Latin layouts? Other apps (gtk, mozilla) behave fine. Should I post a new bug, or is there already one I missed?
(In reply to comment #7) > An unrelated question: are you aware of the keyboard grabbing issue in > LibreOffice, which stopped recognising common shortcuts (Ctrl+X etc.) in > non-Latin layouts? Other apps (gtk, mozilla) behave fine. Should I post a new > bug, or is there already one I missed? Sounds like a bug in LibreOffice: https://bugs.freedesktop.org/show_bug.cgi?id=55585 .
Thanks, it might be related. But LibreOffice shortcuts worked fine up until I upgraded gnome-settings to 3.6.
Oh, I read the comments in that bug now - yes, this is the culprit :)
*** Bug 660566 has been marked as a duplicate of this bug. ***