keygrab: Allow grabbing Menu unmodified by default

https://bugzilla.gnome.org/show_bug.cgi?id=685286